# typesplainer

./: .gitignore  README.md  TODO.md  example.py  setup.cfg
typesplainer/: __init__.py  __main__.py  core.py
