[metadata]
name = typesplainer
version = attr: typesplainer.__version__
description = Python typehint explainer
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wasi-master/typesplainer
author = Wasi Master
author_email = arianmollik323@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Terminals
keywords =
    type
    typehint
    type explainer
    typehint explainer
    typesplainer
project_urls =
    Bug Tracker = https://github.com/wasi-master/typesplainer/issues
    Source = https://github.com/wasi-master/typesplainer
    Say Thanks = https://saythanks.io/to/wasi-master

[options]
packages =
    typesplainer
install_requires =
    mypy
    rich
python_requires = >=3.6
zip_safe = False

